@@ -1,3 +1,8 @@
+2003-12-14  Dave Peticolas  <dave@krondo.com>
+
+	* twisted/test/test_enterprise.py: Frederico Di Gregorio's patch
+	adding a psycopg test case.
+
 2003-12-09  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.1.1, based on rc4.
